@@ -323,8 +323,8 @@ fix_overlapping_specialist_yield_icons = true
 remove_unit_limit = true
 remove_city_improvement_limit = true
 
-; Increases the city limit to 2048 (from 512)
-lift_city_limit = true
+; The city limit can be configured up to a maximum of 2048 or down to a minimum of 0. For base game behavior, set to 512.
+city_limit = 2048
 
 ; Increases the cap on the game turn limit from 1000 to 1000000
 remove_cap_on_turn_limit = true
